--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
     </header>
     <main>
         <div class="gridMenus">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia eum voluptatum necessitatibus facere error atque
-            architecto, dolore veritatis enim dolorem in, corporis sapiente, id labore velit numquam iste itaque mollitia?
+            <button>asdasda</button>
+            <button>bbbbbbbbb</button>
+            <button>cccccc</button>
+            <div class="sliderWrapper">
+                <input type="range" min="1" max="60" value="30" class="slider" id="gridSlider">
+                <span id="sliderValue">30</span>
+            </div>
+            
         </div>
         <div class="gridContent">
-            asdasdas
+           
         </div>
     </main>
     <footer>
