--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     </header>
     <main>
         <div class="gridMenus">
-            <button>asdasda</button>
-            <button>bbbbbbbbb</button>
-            <button>cccccc</button>
+            <div class="buttonWrapper">
+                <button id="button-reset">Reset</button>
+                <button id="button-eraser" class="toggleButton">Eraser</button>
+                <button id="button-rainbow">Rainbow</button>
+            </div>            
             <div class="sliderWrapper">
-                <input type="range" min="1" max="60" value="30" class="slider" id="gridSlider">
+                <input type="range" min="1" max="60" value="30" class="slider" id="slider-grid">
                 <span id="sliderValue">30</span>
             </div>
             
